--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="main">
         <div class="box"></div>
         <nav class="flex-box">
-            <span><img width="150" class="logo" src="Assets/Images/logo.svg" alt=""></span>
+            <span><img width="150" class="logo" src="Assets/Images/logo.svg" alt="Netflix.svg"></span>
             <div class="navbuts">
                 <select name="Language" class="button langbut">
                     <option value="english">English</option>
@@ -31,6 +31,58 @@
             </span>
         </div>
     </div>
+    <section class="first">
+        <div>
+            <h1 class="heading">Enjoy on your TV</h1>
+            <p class="desc">Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.
+            </p>
+        </div>
+        <div class="tv">
+            <video class="tvvid" src="Assets/Videos/tv-video.m4v" autoplay loop></video>
+            <img width="550" src="Assets/Images/tv.png" alt="TV.png">
+        </div>
+    </section>
+    <div class="separator"></div>
+    <section class="second">
+        <div class="phone">
+            <img width="600" src="Assets/Images/girl.jpg" alt="stanger things.jpg">
+            <div class="downloadbox">
+                <div class="downimage">
+                    <img src="Assets/Images/downimage.png" alt="stanger things.png">
+                </div>
+                <div class="downtxt">
+                    <div>Stranger Things</div>
+                    <div>Downloading...</div>
+                </div>
+            </div>
+        </div>
+        <div>
+            <h1 class="heading">Download your shows to watch offline</h1>
+            <p class="desc">Save your favourites easily and always have something to watch.</p>
+        </div>
+    </section>
+    <div class="separator"></div>
+    <section class="third">
+        <div>
+            <h1 class="heading">Watch Everywhere</h1>
+            <p class="desc">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
+        </div>
+        <div>
+            <img class="compimg" src="Assets/Images/computer.png" alt="computer.png">
+            <video class="compvid" src="Assets/Videos/comp-video.m4v" loop autoplay></video>
+        </div>
+    </section>
+    <div class="separator"></div>
+    <section class="fourth">
+        <div>
+            <img class="kidsimg" src="Assets/Images/chid.png" alt="kids.png">
+        </div>
+        <div>
+            <h1 class="heading">Create profiles for kids</h1>
+            <p class="desc">Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
+        </div>
+    </section>
+    <div class="separator"></div>
 </body>
 
 </html>
