--- a/index.html
+++ b/index.html
@@ -130,6 +130,9 @@
         </span>
     </section>
     <div class="separator"></div>
+    <footer>
+        <div class="contact">Questions? Call <a href="">000-800-919-1694</a></div>
+    </footer>
 </body>
 
 </html>
