--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
             </div>
         </nav>
         <div class="sub">
-            <span><h1>Unlimited movies, TV shows and more</h1></span>
+            <span>
+                <h1>Unlimited movies, TV shows and more</h1>
+            </span>
             <span>Watch anywhere. Cancel anytime.</span>
             <span>Ready to watch? Enter your email to create or restart your membership.</span>
             <span class="details">
@@ -79,46 +81,61 @@
         </div>
         <div>
             <h1 class="heading">Create profiles for kids</h1>
-            <p class="desc">Send children on adventures with their favourite characters in a space made just for them—free with your membership.</p>
+            <p class="desc">Send children on adventures with their favourite characters in a space made just for
+                them—free with your membership.</p>
         </div>
     </section>
     <div class="separator"></div>
     <section class="faq">
-        <div><h1 class="heading">Frequently Asked Questions</h1></div>
+        <div>
+            <h1 class="heading">Frequently Asked Questions</h1>
+        </div>
         <div class="faqbox">
             <span class="faqtxt">What is Netflix</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white" fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white"
+                fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
             </svg>
         </div>
         <div class="faqbox">
             <span class="faqtxt">How much does Netflix cost?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white" fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white"
+                fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
             </svg>
         </div>
         <div class="faqbox">
             <span class="faqtxt">Where can I watch?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white" fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white"
+                fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
             </svg>
         </div>
         <div class="faqbox">
             <span class="faqtxt">How do I cancel?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white" fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white"
+                fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
             </svg>
         </div>
         <div class="faqbox">
             <span class="faqtxt">How can I watch on Netflix?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white" fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white"
+                fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
             </svg>
         </div>
         <div class="faqbox">
             <span class="faqtxt">Is Netflix good for kids?</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white" fill="none">
-                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="50" height="50" color="white"
+                fill="none">
+                <path d="M12 4V20M20 12H4" stroke="currentColor" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
             </svg>
         </div>
         <div class="ready">
@@ -132,6 +149,29 @@
     <div class="separator"></div>
     <footer>
         <div class="contact">Questions? Call <a href="">000-800-919-1694</a></div>
+        <ul class="links">
+            <li><a class="link-items" href="">FAQ</a></li>
+            <li><a class="link-items" href="">Help Centre</a></li>
+            <li><a class="link-items" href="">Account</a></li>
+            <li><a class="link-items" href="">Media Centre</a></li>
+            <li><a class="link-items" href="">Inverstor Relations</a></li>
+            <li><a class="link-items" href="">Jobs</a></li>
+            <li><a class="link-items" href="">Ways to Watch</a></li>
+            <li><a class="link-items" href="">Terms of Use</a></li>
+            <li><a class="link-items" href="">Privacy</a></li>
+            <li><a class="link-items" href="">Cookie Preference</a></li>
+            <li><a class="link-items" href="">Corporate Information</a></li>
+            <li><a class="link-items" href="">Contact Us</a></li>
+            <li><a class="link-items" href="">Speed Test</a></li>
+            <li><a class="link-items" href="">Legal Notices</a></li>
+            <li><a class="link-items" href="">Only On Netflix</a></li>
+        </ul>
+        <div class="buttonf">
+            <select name="Language" class="button langbut">
+            <option value="english">English</option>
+            <option value="Hindi">Hindi</option>
+        </select></div>
+        <div class="link-items">Netflix India</div>
     </footer>
 </body>
 
