--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <p class="desc">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
         <div class="secImg">
-            <video id="pos" src="Assets/Videos/comp-video.m4v" loop autoplay></video>
+            <video id="pos" src="Assets/Videos/comp-video.m4v" loop autoplay controls></video>
             <img width="530" src="Assets/Images/computer.png" alt="computer.png">
         </div>
     </section>
