--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </p>
         </div>
         <div class="secImg">
-            <video src="Assets/Videos/tv-video.m4v" autoplay loop></video>
+            <video loop autoplay src="Assets/Videos/tv-video.m4v"></video>
             <img width="550" src="Assets/Images/tv.png" alt="TV.png">
         </div>
     </section>
@@ -72,7 +72,7 @@
             <p class="desc">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV.</p>
         </div>
         <div class="secImg">
-            <video id="pos" src="Assets/Videos/comp-video.m4v" loop autoplay controls></video>
+            <video loop autoplay id="pos" src="Assets/Videos/comp-video.m4v"></video>
             <img width="530" src="Assets/Images/computer.png" alt="computer.png">
         </div>
     </section>
